--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <body>
   <div class="card">
     <!-- Logo -->
-    <img src="./logo.png" alt="Game logo" class="logo" />
+    <img src="Logo.png" alt="Game logo" class="logo" />
 
     <h1>Need For Snake</h1>
     <p>
